# vertex-gemini-agentic-rag-eval-platform

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  schemas.py
app/agent/: graph.py  guardrails.py  query_classifier.py  response_generator.py  router.py  verifier.py
app/api/: routes_chat.py  routes_evaluation.py  routes_experiments.py  routes_health.py  routes_traces.py
app/data/: benchmark_questions.jsonl
app/data/documents/: callback_policy.md  complaint_policy.md  contract_change_policy.md  customer_verification_policy.md  escalation_policy.md  invoice_policy.md
app/evaluation/: evaluator.py  metrics.py  regression.py  reports.py
app/llm/: base.py  factory.py  gemini_provider.py  local_http_provider.py  mock_provider.py
app/observability/: experiment_store.py  latency.py  trace_logger.py
app/retrieval/: chunker.py  faiss_store.py  qdrant_store.py  retriever.py  vector_store.py
docs/: api_examples.md  architecture.md  evaluation_method.md  failure_analysis.md  provider_comparison.md
scripts/: compare_runs.py  export_report.py  ingest_documents.py  run_benchmark.py
tests/: test_api.py  test_guardrails.py  test_query_classifier.py  test_retriever.py
